Add "Iterate Layers" project

--- a/IterateLayers/IterateLayers.csproj
+++ b/IterateLayers/IterateLayers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{981C3C93-84C8-4BB3-A906-9B58BA5F7F3B}</ProjectGuid>
+    <ProjectGuid>{EEE1CF23-AF7C-437E-B1E2-E4DA92AF9F14}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AddMyLayer</RootNamespace>
-    <AssemblyName>AddMyLayer</AssemblyName>
+    <RootNamespace>IterateLayers</RootNamespace>
+    <AssemblyName>IterateLayers</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -53,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="IterateLayers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
